--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,16 @@
-// Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
-
-// Variables
-@import 'variables';
 
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
+// @import 'bootstrap/scss/bootstrap';
+
+// theme style code
+
+// @import './theme/vendor/css/core.css';
+
+// @import './theme/vendor/css/theme-default.css';
+
+// @import './theme/css/demo.css';
+
+
+// Variables
+@import './style';
+
